# shelfsense-m5

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: PHASE_3_PLAN.md
notebooks/: 01_eda.ipynb  04_prophet_hierarchical.ipynb
reports/: 01_eda_findings.md  02_classical_methods.md  02_sample_selection.md  03_hierarchical.md  04_feature_engineering.md  05_lightgbm_results.md  06_per_category_models.md  09_multi_horizon.md  10_per_store_models.md  11_dl_environment_setup.md  12_deep_learning_research.md  14_lightgbm_diversification.md  day10_run_log.txt  day10_scores.json  day11_per_dept_scores.json  day12_tvp_1p3_scores.json  day12_tvp_1p7_scores.json  day13_ensemble_scores.json  day14_rmse_mh_scores.json  day15_sanity_lags_scores.json  day17_store_dept_scores.json  day18_ylags_scores.json  day2_baseline_scores.json  day3_run_log.txt  day4_hierarchical_scores.json  day4_prophet_scores.json  day4_run_log.txt  day5_run_log.txt  day6_feature_importance.csv  day6_lgbm_scores.json  day6_run_log.txt  day7_run_log.txt  day7_scores.json  day8_scores.json  day9_run_log.txt  day9_scores.json  eda_stats.json  leaderboard.md  sample_1000_series.csv
scripts/: 05_build_features.py  07_train_per_category.py  10_train_per_store.py  11_lgbm_per_dept.py  13_ensemble_tvp.py  15_sanity_train_lags.py  17_lgbm_store_dept.py  18_lgbm_ylags_mh.py  _bench_slice.py  generate_charts.py  run_day4.py  smoke_test_nbeats.py
shelfsense/: __init__.py  cli.py
submissions/: arima_sample_submission.csv  ets_sample_submission.csv  prophet_sample_submission.csv
(+55 files in other folders)
