[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shelfsense"
version = "0.1.0"
description = "Production-grade M5 demand forecasting pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "lightgbm>=4.6",
    "optuna>=4.8",
    "pyarrow>=14.0",
]

[project.scripts]
shelfsense = "shelfsense.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.7",
]
dl = [
    "darts>=0.44",
    "torch>=2.0",
    "pytorch-lightning>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shelfsense"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
